<resources>
    <string name="app_name">Activitat_1-Constraint_Layout</string>
    <string name="hora_2">Hora 2</string>
    <string name="music_playlist_1">Music Playlist 1</string>
    <string name="_17_568">17 568</string>
    <string name="button">Button</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="dot">dot</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="dividir">·|·</string>
    <string name="restar">-</string>
    <string name="sumar">+</string>
    <string name="c">C</string>
    <string name="x">X</string>
</resources>