<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora">

    <Button
        android:id="@+id/button17"
        android:layout_width="227dp"
        android:layout_height="77dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="22dp"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button18"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="22dp"
        android:text="@string/dot"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button16"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="12dp"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button15"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="12dp"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button13"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="11dp"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button12"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="11dp"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button11"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="11dp"
        android:text="@string/_6"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button10"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/_9"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="38dp"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="38dp"
        android:text="@string/sumar"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button8"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="37dp"
        android:text="@string/_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="361dp"
        android:layout_height="49dp"
        android:layout_gravity="end"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/back"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:inputType="number"
        android:text="@string/_17_568"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="96dp"
        android:layout_height="84dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="290dp"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button2"
        android:layout_width="96dp"
        android:layout_height="84dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:text="@string/c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button3"
        android:layout_width="96dp"
        android:layout_height="84dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="25dp"
        android:text="@string/dividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button4"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="120dp"
        android:text="@string/restar"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>